@@ -53,15 +53,19 @@ public class JWTIssuerConfigTest extends SolrTestCase {
             .setAud("audience")
             .setClientId("clientid")
             .setWellKnownUrl("wellknown")
-            .setAuthorizationEndpoint("https://issuer/authz");
+            .setAuthorizationEndpoint("https://issuer/authz")
+            .setTokenEndpoint("https://issuer/token")
+            .setAuthorizationFlow("code_pkce");
 
     testIssuerConfigMap = testIssuer.asConfig();
 
     testIssuerJson =
         "{\n"
             + "  \"aud\":\"audience\",\n"
+            + "  \"tokenEndpoint\":\"https://issuer/token\",\n"
             + "  \"wellKnownUrl\":\"wellknown\",\n"
             + "  \"clientId\":\"clientid\",\n"
+            + "  \"authorizationFlow\":\"code_pkce\",\n"
             + "  \"jwksUrl\":[\"https://issuer/path\"],\n"
             + "  \"name\":\"name\",\n"
             + "  \"iss\":\"issuer\",\n"
@@ -87,6 +91,11 @@ public class JWTIssuerConfigTest extends SolrTestCase {
   public void parseConfigMapNoName() {
     testIssuerConfigMap.remove("name"); // Will fail validation
     new JWTIssuerConfig(testIssuerConfigMap).isValid();
+  }
+
+  @Test(expected = SolrException.class)
+  public void setInvalidAuthorizationFlow() {
+    new JWTIssuerConfig("name").setAuthorizationFlow("invalid_flow");
   }
 
   @Test
@@ -173,6 +182,7 @@ public class JWTIssuerConfigTest extends SolrTestCase {
     assertEquals("https://acmepaymentscorp/oauth/jwks", config.getJwksUrl());
     assertEquals("http://acmepaymentscorp", config.getIssuer());
     assertEquals("http://acmepaymentscorp/oauth/auz/authorize", config.getAuthorizationEndpoint());
+    assertEquals("http://acmepaymentscorp/oauth/oauth20/token", config.getTokenEndpoint());
     assertEquals(
         Arrays.asList(
             "READ", "WRITE", "DELETE", "openid", "scope", "profile", "email", "address", "phone"),
